Fix the double scroll-bar issue, change wording and links to blog posts

--- a/app/styles/elements/_layout.scss
+++ b/app/styles/elements/_layout.scss
@@ -15,6 +15,7 @@ body {
 	color: #333;
 	margin: 0;
 	padding: 0 0 0;
+	overflow: hidden;
 
 	// This only over 768px
 	// &.is-over-picture{
